# MFUA

./: README.md
1_course/bash/: replaceText.cpp  replaceText.sh
1_course/c++/hw/hw1/: grp  grp.cpp  hloWrld
1_course/c++/hw/hw10/: a.out  pointerToStartArray  pointerToStartArray.cpp
1_course/c++/hw/hw2/: kxba  kxba.cpp  pokraska  pokraska.cpp  sqare  sqare.cpp  triangle  triangle.cpp
1_course/c++/hw/hw3/: sizeof  sizeof.cpp
1_course/c++/hw/hw4/: chsOst  chsOst.cpp
1_course/c++/hw/hw5/: module  module.cpp
1_course/c++/hw/hw6/: nok  nok.cpp
1_course/c++/practise/: DocumentManager.hpp  FinancialDocument.hpp  Invoice.hpp  Receipt.hpp  Report.hpp  main.cpp  Дневник практики.docx
2_course/c++/hw/: nekrasov23.1.cpp  nekrasov24.1.cpp
2_course/c++/projects/: CMakeLists.txt  constructor_utils.cpp  constructor_utils.hpp  iterator.cpp  iterator.hpp  main.cpp  tree.cpp  tree.hpp
2_course/dataBase/: 3.1.sql  3.2.sql  3.2D.sql  3.3.sql  3.3D.sql  3.4.sql  3.5.sql  3.5D.sql  3.6D.sql
2_course/workOnPair/: bitset.cpp  hack_me.cpp  simple.cpp  tree.cpp  vector.cpp
2_course/workOnPair/exponential/: main_for_exponential.cpp
